src/objects/Participant_Group__c.object
<CustomObject>
    <description>Agile Supplier Group is configured for  each Project</description>
    <fields>
        <fullName>Chatter_Link__c</fullName>
        <formula>HYPERLINK (&quot;https://na14.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=&quot;&amp;  Supplier_Network_ID__c , &quot;Communication Hub &quot; &amp;  Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Communication Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project ID Relationship</description>
        <inlineHelpText>Project ID Relationship</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Participant Groups</relationshipLabel>
        <relationshipName>Participant_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier_Network_ID__c</fullName>
        <description>The Actual ID of the Supplier Network  - once configured used to set the Parent Object in each postings</description>
        <externalId>true</externalId>
        <inlineHelpText>The SupplierNetwork  ID</inlineHelpText>
        <label>Supplier Network ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Participant Group</label>
    <nameField>
        <label>Supplier Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participant Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>